--- a/site/css/main.css
+++ b/site/css/main.css
@@ -13,14 +13,6 @@ header{
     top: 0;
 }
 
-menu{
-    height: 100vh;
-    width: 100vw;
-    background-color: white;
-    z-index: 2;
-    margin: 0;
-    padding: 0;
-}
 
 .menuitems{
     text-align: center;
@@ -28,6 +20,8 @@ menu{
 
 .clear{
   cursor: pointer;  ENDAST PÅ DESKTOP********
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
 .constantheader{
@@ -40,6 +34,44 @@ menu{
     grid-template-columns: 20% auto 20%;
     grid-template-rows: 70px;
 }
+
+/*Menu Button Animation*/
+.menu{
+    height: 100vh;
+    width: 100vw;
+    background:  white;
+    position: fixed;
+    top: 0;
+    left: -110vw;
+    transition: left 0.2s;
+    box-shadow: 10px 0px 21px -10px rgba(0,0,0,0.5);
+    z-index: 2;
+}
+
+.menu-button{
+    cursor: pointer;
+    display: inline;
+}
+
+.show{
+    left: 0;
+}
+
+.fade-layer{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.2);
+    display: none;
+}
+
+.fade-layer.visible{
+    display: block;
+}
+
+/* blaj */
 
 .nameheader{
 
