--- a/site/css/main.css
+++ b/site/css/main.css
@@ -16,6 +16,7 @@ header{
 
 .menuitems{
     text-align: center;
+    margin-top: 30px;
 }
 
 .clear{
@@ -105,3 +106,9 @@ main{
     width: 170px;
     background-color: blueviolet;
 }
+
+a, a:visited{
+    text-decoration: none;
+    cursor: pointer;
+    color: black;
+  }
