--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,8 +1,11 @@
-body{
-    height: 100%;
+body,p, h2,h3,h4,h5,h6,h6{
     margin: 0;
     padding: 0;
-    background-color: #fff;
+}
+
+body{
+    height: 100%;
+    xbackground-color: #fff;
     overflow-y: scroll;
 }
 
@@ -78,10 +81,6 @@ header{
 
 }
 
-.buttonheader{
-
-}
-
 .material-icons.md-36{
 font-size: 28px;
 }
@@ -102,13 +101,54 @@ main{
 }
 
 .textbox{
-    height: 45px;
+    padding-top: 2px;
+    text-align: center;
+    height: 40px;
     width: 170px;
-    background-color: blueviolet;
+    background-color: white;
+    border:1px black solid;
 }
 
 a, a:visited{
     text-decoration: none;
     cursor: pointer;
     color: black;
-  }
+}
+
+.productcontainer{
+    height: 100vh;
+    width: 100vw;
+}
+
+.cart{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cartproduct{
+    display: flex;
+    height: 75px;
+    width: 100vw;
+}
+
+.cartpic{
+    height: 60px;
+    width: 60px;
+    margin: 5px 5px;
+    background-color: pink;
+}
+
+.cartinfo{
+    height: 60px;
+    width: 300px;
+    margin-top: 5px;
+}
+
+.checkout{
+    height: 40px;
+    width: 90px;
+    text-align: center;
+    padding-top: 15px;
+    background-color: pink;
+}
